Move static build to deployment process #3 (#8)
* Moved static build to deployment process, out of repo

* move build process #2 (ejected)

* move build process #3 with dependencies

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Small Pox Reunion Photos",
   "main": "index.js",
   "scripts": {
+    "build": "cd src&&yarn&&yarn build",
     "start": "node index.js",
     "dev": "nodemon"
   },
